--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_blue_plus: ^2.0.0
   permission_handler: ^12.0.1
   logger: ^2.0.0
+  firebase_core: ^4.2.0
 
 dev_dependencies:
   flutter_test:
